--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="quiz-over-modal">
         <div class="content">
             <h1>A good try!</h1>
-            <p>You answered on 
+            <p>You answered 
                 <span id="correct-answer"></span> from 
                 <span id="number-of-all-questions-2"></span> questions
             </p>
